# avidemux

avidemux/: ADM_preview.cpp  ADM_preview.h  CMakeLists.txt  gtk_gui.cpp  gui_blackframes.cpp  gui_navigate.cpp  gui_savenew.cpp  guiplay.cpp  main.cpp
avidemux/ADM_audio/: audio_packetizer.cpp  audioac3ex.cpp  audiogen.cpp  audiomp3ex.cpp  audiotimeline.cpp  audiowavex.cpp
avidemux/ADM_audiocodec/: ADM_audiocodec.cpp  ADM_audiocodec.h  ADM_lpcm.cpp  ADM_pluginLoad.cpp
avidemux/ADM_audiodevice/: ADM_audioDeviceThreaded.cpp  ADM_audiodevice.cpp  ADM_audiodevice.h  CMakeLists.txt
avidemux/ADM_audiofilter/: audio_encoderWrapper.cpp  audio_raw.cpp  audio_raw.h  audiodeng_buildfilters.cpp  audioeng_buff.cpp  audioeng_buildfilters.h  audiofilter_bridge.cpp  audiofilter_bridge.h  audiofilter_buildchain.cpp  audiofilter_mixer.cpp  audioprocess.hxx
avidemux/ADM_codecs/: ADM_codecs.cpp  ADM_ffmp43.cpp  ADM_ffmpeg.cpp
avidemux/ADM_coreAudioDevice/src/: ADM_audioDeviceThreaded.cpp  CMakeLists.txt
avidemux/ADM_coreMuxer/src/: ADM_dynaMuxer.cpp  ADM_videoCopy.cpp  CMakeLists.txt
avidemux/ADM_coreUtils/src/: ADM_bitstream.cpp  ADM_fileio.cpp  ADM_gettext.cpp  ADM_infoExtractor.cpp  CMakeLists.txt  avidemutils.cpp  prefs.cpp
avidemux/ADM_editor/: ADM_Video.cpp  ADM_Video.h  ADM_edAudio.cpp  ADM_edAudio.hxx  ADM_edCache.cpp  ADM_edCache.h  ADM_edFrameType.cpp  ADM_edIdentify.cpp  ADM_edLoadSave.cpp  ADM_edRender.cpp  ADM_edStub.cpp  ADM_edit.cpp  ADM_edit.hxx  ADMedAVIAUD.cpp
avidemux/ADM_encoder/: ADM_pluginLoad.cpp  adm_encConfig.cpp  adm_encRequant.cpp  adm_encffmpeg.cpp  adm_encmpeg2enc.cpp
avidemux/ADM_filter/: filter.cpp  filter_saveload.cpp
avidemux/ADM_infoExtractor/: ADM_infoextractor.cpp
avidemux/ADM_inputs/: CMakeLists.txt
avidemux/ADM_libraries/: CMakeLists.txt
avidemux/ADM_mpegIndexer/: dmx_indexer.cpp
avidemux/ADM_osSupport/: CMakeLists.txt
avidemux/ADM_outputs/: CMakeLists.txt
avidemux/ADM_requant/: tcrequant.c
avidemux/ADM_toolkit/: automation.cpp
cmake/: ad_plugin.cmake  av_plugin.cmake  dm_plugin.cmake
plugins/: CMakeLists.txt
plugins/ADM_muxers/muxerMp4/: CMakeLists.txt  muxerMP4.cpp  muxerMP4.h  muxerMP4Plugin.cpp
(+164 files in other folders)
